<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExoTroisActivity">

    <GridLayout
        android:id="@+id/gl_exo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:columnCount="1">

        <TextView
            android:id="@+id/txv_1_exo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/resultat" />

        <EditText
            android:id="@+id/edx_1_exo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/nombre_face"
            android:importantForAutofill="no"
            android:inputType="number"
            tools:ignore="LabelFor" />

    </GridLayout>

    <Button
        android:id="@+id/btn_exo3_lance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lance_deux"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gl_exo3"/>

</androidx.constraintlayout.widget.ConstraintLayout>